@@ -1,3 +1,11 @@
+2008-02-21 Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* GSCache.h:
+	* GSCache.m:
+	Improve handling of case when delegate asks for an item to be kept...
+	changes the delegat callback methoid to include lifetime information.
+	Make the cache thread-safe.
+
 2008-01-31 Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* GSCache.h:
